--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-    "name": "oauth2-demo",
-    "version": "0.5.0",
-    "private": true,
-    "main": "app.js",
-    "description": "oauth2-demo",
-    "author": {
-        "name": "Ying",
-        "email": ""
-    },
-    "dependencies": {
-        "bluebird": "^3.4.0",
-        "body-parser": "~1.8.1",
-        "cookie-parser": "~1.3.3",
-        "cookie-session": "^2.0.0-alpha.1",
-        "cookies": "^0.6.1",
-        "debug": "~2.0.0",
-        "ejs": "^2.4.1",
-        "express": "~4.9.0",
-        "lodash": "^4.12.0",
-        "morgan": "~1.3.0",
-        "node-uuid": "^1.4.7",
-        "request": "^2.72.0",
-        "serve-favicon": "~2.1.3",
-        "stack-trace": "0.0.9",
-        "stylus": "0.42.3"
-    }
+  "name": "oauth2-demo",
+  "version": "0.5.0",
+  "private": true,
+  "main": "app.js",
+  "description": "oauth2-demo",
+  "author": {
+    "name": "Ying",
+    "email": ""
+  },
+  "dependencies": {
+    "bluebird": "^3.4.0",
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "cookie-session": "^2.0.0-alpha.1",
+    "cookies": "^0.6.1",
+    "debug": "~2.0.0",
+    "ejs": "^2.4.1",
+    "express": "~4.9.0",
+    "lodash": "^4.12.0",
+    "marked": "^0.3.5",
+    "morgan": "~1.3.0",
+    "node-uuid": "^1.4.7",
+    "request": "^2.72.0",
+    "serve-favicon": "~2.1.3",
+    "stack-trace": "0.0.9",
+    "stylus": "0.42.3"
+  }
 }
